--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "prestart": "node build-scripts/start-message.js",
     "start": "npm-run-all --parallel security-check open:src",
+    "open:src": "node build-scripts/src-server.js",
     "security-check": "nsp check",
     "localtunnel": "lt --port 3000",
     "share": "npm-run-all --parallel open:src localtunnel"
