--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "description": "Sliceart Javascript Development Starter Kit",
   "scripts": {
-    "prestart": "node build-scripts/start-message.js",
+    "prestart": "babel-node build-scripts/start-message.js",
     "start": "npm-run-all --parallel security-check open:src",
-    "open:src": "node build-scripts/src-server.js",
+    "open:src": "babel-node build-scripts/src-server.js",
     "security-check": "nsp check",
     "localtunnel": "lt --port 3000",
     "share": "npm-run-all --parallel open:src localtunnel"
