Sample mocha test and respective npm scripts added

--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "description": "Sliceart Javascript Development Starter Kit",
   "scripts": {
     "prestart": "babel-node build-scripts/start-message.js",
-    "start": "npm-run-all --parallel security-check open:src lint:watch",
+    "start": "npm-run-all --parallel security-check open:src lint:watch test:watch",
     "open:src": "babel-node build-scripts/src-server.js",
     "lint": "esw webpack.config.*, src, build-scripts --color",
     "lint:watch": "npm run lint -- --watch",
     "security-check": "nsp check",
     "localtunnel": "lt --port 3000",
     "share": "npm-run-all --parallel open:src localtunnel",
-    "test": "mocha --reporter progress build-scripts/test-setup.js \"src/**/*.test.js\""
+    "test": "mocha --reporter landing build-scripts/test-setup.js \"src/**/*.test.js\"",
+    "test:watch": "npm run test -- --watch"
   },
   "author": "Sliceart",
   "license": "MIT",
