--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "localtunnel": "lt --port 3000",
     "share": "npm-run-all --parallel open:src localtunnel",
     "test": "mocha --reporter landing build-scripts/test-setup.js \"src/**/*.test.js\"",
-    "test:watch": "npm run test -- --watch"
+    "test:watch": "npm run test -- --watch",
+    "generate-mock-data": "babel-node build-scripts/generate-mock-data"
   },
   "author": "Sliceart",
   "license": "MIT",
