Typo fix to make production build work. Dist folder added to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,6 @@ npm-debug.log
 
 # Prevent committing mocked data to the repository
 src/api/*.json
+
+# Prevent committing dist folder to the repository
+dist
